# ebbify

./: .gitignore  Cargo.toml  TODO.md
src/: app.rs  error.rs  main.rs  ui_state.rs
src/components/: account_manager.rs  balance_manager.rs  category_manager.rs  currency_manager.rs  menu_bar.rs  mod.rs  transaction_list.rs
src/data/: cached_value.rs  mod.rs  models.rs  price.rs  save_file.rs  updates.rs
src/widgets/: category_picker.rs  currency_picker.rs  date_input.rs  mod.rs  price_input.rs  stringable_input.rs  validated_text_edit.rs
