[package]
name = "ebbify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bank-statement-parser = { version = "0.1.0", git = "https://github.com/czinn/bank-statement-parser" }
chrono = { version = "0.4.24", features = ["serde"] }
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = { version = "0.21.0", features = ["datepicker"] }
rfd = "0.11.3"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
zstd = "0.12.3"
